--- a/kisa-webapp/src/App/components/Dashboard/Calendar.css
+++ b/kisa-webapp/src/App/components/Dashboard/Calendar.css
@@ -41,13 +41,9 @@ abbr[title] {
     color: white;
 }
 
-.dot {
-    height: 8px;
-    width: 8px;
-    background-color: #6359E9;
-    border-radius: 50%;
-    display: flex;
-    margin-left: 1px;
+/*날짜 높이*/
+.tile {
+    height: 10px;
 }
 
 .react-calendar__tile:enabled:hover,
